--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.container{
+   width: 85%;
+   margin:auto
+}
+*{
+  box-sizing: border-box;
+}
